Project2/force-app/main/default/objects/Account/fields/AccountUser__c.field-meta.xml
<CustomField>
    <fullName>AccountUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AccountUser</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AccountUsers</relationshipName>
    <type>Lookup</type>
</CustomField>