Project2/force-app/main/default/objects/Account/fields/AvgScore__c.field-meta.xml
<CustomField>
    <fullName>AvgScore__c</fullName>
    <formula>IF(NumQuizzes__c!=0, TotalScore__c /  NumQuizzes__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avg Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>