Project2/force-app/main/default/objects/Account/fields/NumQuizzes__c.field-meta.xml
<CustomField>
    <fullName>NumQuizzes__c</fullName>
    <label>Number of Quizzes</label>
    <summaryForeignKey>AccountQuiz__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>