Project2/force-app/main/default/objects/Account/fields/TotalScore__c.field-meta.xml
<CustomField>
    <fullName>TotalScore__c</fullName>
    <label>Total Score</label>
    <summarizedField>AccountQuiz__c.Score__c</summarizedField>
    <summaryForeignKey>AccountQuiz__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>